--- a/app/alquiler/templates/plantilla/menu.html
+++ b/app/alquiler/templates/plantilla/menu.html
@@ -1,14 +1,73 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu</title>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    
+    <link type="text/css" href='{% static "css/bootstrap.min.css" %}' rel="stylesheet"> 
+    <link type="text/css" href='{% static "css/menu.css" %}' rel="stylesheet"> 
 </head>
-<body>
-    <section>
-        <h1>sssssssssssss</h1>
-    </section>
+<body >
+    <header>
+        <nav class="custom-bg-color">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-4 col-left">
+                        <div class="column-content">
+                            <a class="navbar-brand" href="#">
+                                <img src="../../static/image/idealroom.png" alt="Logo" width="mx-auto" height="24" class="d-inline-block align-text-top">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-center">
+                        <div class="column-content ">
+                            <div class="btn-group" role="group" aria-label="Basic radio toggle button group" >
+                                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                                <label class="btn btn-primary bt-color text-dark" for="btnradio1">Inicio</label>
+                              
+                                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                                <label class="btn btn-primary bt-color text-dark" for="btnradio2">Categoria</label>
+                              
+                                <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+                                <label class="btn btn-primary bt-color text-dark" for="btnradio3">Ubicacion</label>
+            
+                                <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
+                                <label class="btn btn-primary bt-color text-dark" for="btnradio4">Habitaciones</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-right">
+                        <div class="column-content ">
+                            <div class="user-form">
+                                <!-- Campo de búsqueda -->
+                                <form class="d-flex" role="search">
+                                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                                </form>
+                                <!-- Imagen de usuario -->
+                                <a class="" href="#">
+                                    <img src="../../static/image/usuario.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+                                </a>
+                            </div>                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+        
+        <main>
+            <div class="nav-color">
+                <p>
+                    Nisi aliquip voluptate culpa velit occaecat Lorem eiusmod est consequat ullamco veniam enim ad ex. Qui adipisicing eu id consectetur culpa aliqua qui dolor. Proident occaecat non proident quis tempor magna est amet. Aute culpa cupidatat consequat magna nostrud officia ipsum aliqua proident eu cupidatat ipsum. Esse laborum eu consequat Lorem eu labore nisi nisi. Mollit cupidatat dolor irure cupidatat aliquip ullamco enim.
+                </p>
+            </div>
+        </main>
+        <footer>
+        </footer>
 </body>
 </html>
