--- a/app/alquiler/templates/plantilla/men.html
+++ b/app/alquiler/templates/plantilla/men.html
@@ -1,148 +1,101 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    
-    <link type="text/css" href='{% static "css/bootstrap.min.css" %}' rel="stylesheet"> 
-    <link type="text/css" href='{% static "css/menu.css" %}' rel="stylesheet"> 
+    <title>Habitaciones</title>
+    <link type="text/css" href='{% static "css/menu2.css" %}' rel="stylesheet">
+    <script src="https://unpkg.com/feather-icons"></script>
 </head>
-<body >
-    <header>
-        <nav>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-4">
-                        <a class="navbar-brand" href="#">
-                            <img src="../../static/image/idealroom.png" alt="Logo" width="mx-auto" height="24" class="d-inline-block align-text-top">
-                        </a>
-                        
-                    </div>
-                    <div class="col-md-4">
-                        <a class="navbar-brand" href="#">
-                            <img src="../../static/image/idealroom.png" alt="Logo" width="mx-auto" height="24" class="d-inline-block align-text-top">
-                        </a>
-                        
-                    </div>
-                    <div class="col-md-4">
-                        <a class="navbar-brand" href="#">
-                            <img src="../../static/image/idealroom.png" alt="Logo" width="mx-auto" height="24" class="d-inline-block align-text-top">
-                        </a>
-                        
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header>
 
-    <header>
-        <nav class="navbar">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="column-content">
-                            <!-- Contenido dentro de la primera columna -->
-                            <a href="#">Enlace 1</a>
-                            <!-- Otro contenido -->
+<body>
+
+    <div class="profile-container">
+        <div class="profile-picture">
+            <img src="https://i.pinimg.com/564x/81/f8/34/81f834afff7375bdb6f3c345f842b865.jpg" alt="Perfil de Crisulo">
+        </div>
+        <div class="profile-info">
+            <h2>Crisulo</h2>
+            <p>Correo Electrónico: crisulo@example.com</p>
+            <p>Ubicación: Ciudad, País</p>
+            <p>Descripción: Breve descripción sobre Crisulo.</p>
+        </div>
+
+        <div class="button-container">
+            <button class="main-button">Editar Perfil</button>
+        </div>
+
+        <div class="button-container">
+            <button class="secondary-button">Favoritos </button>
+            <button class="secondary-button">Guardados</button>
+            <button class="secondary-button">Comentarios</button>
+            <button class="secondary-button">Configuración</button>
+        </div>
+
+        <hr>
+
+    </div>
+
+    <div class="room-container">
+        <div class="container text-center">
+            <div class="row row-cols-3">
+                <div class="col">
+                    <div class="room-details">
+                        <div class="room-img">
+                            <img src="https://i.pinimg.com/564x/99/57/50/9957506f5315d50b96b2c7ceda79295c.jpg"
+                                alt="Imagen de la habitación">
                         </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="column-content">
-                            <div class="btn-group" role="group" aria-label="Basic radio toggle button group" >
-                                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                                <label class="btn btn-primary bt-color text-dark" for="btnradio1">Inicio</label>
-                              
-                                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                                <label class="btn btn-primary bt-color text-dark" for="btnradio2">Categoria</label>
-                              
-                                <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-                                <label class="btn btn-primary bt-color text-dark" for="btnradio3">Ubicacion</label>
+                        <div class="room-info">
+                            <div>
+                                <div class="room-cabeza">
+                                    <h1 class="room-title">Habitacion independiente con baño propio</h1>
+                                    <div class="room-price">S/.240 </div>
+                                </div>
+                                <hr>
             
-                                <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
-                                <label class="btn btn-primary bt-color text-dark" for="btnradio4">Habitaciones</label>
+                                <div class="room-ubi">
+                                    <a href="https://www.google.com/maps">
+                                        <img class="room-glovo" src="../../static/image/glovo.png">
+                                    </a>
+                                    <P class="room-paragraph">En el distrito de Santa Anita, Lima</P>
+                                </div>
+            
+                            </div>
+            
+                            <div class="services">
+                                <div class="service">
+                                    <img src="../../static/image/cama.png" alt="Cama">
+                                    <p class="available">Disponible</p>
+                                </div>
+                                <div class="service">
+                                    <img src="../../static/image/ducha.png" alt="Ducha">
+                                    <p class="available">Disponible</p>
+                                </div>
+                                <div class="service">
+                                    <img src="../../static/image/luz.png" alt="Luz">
+                                    <p class="available">Disponible</p>
+                                </div>
+                                <div class="service">
+                                    <img src="../../static/image/wifi.png" alt="Internet">
+                                    <p class="available">Disponible</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="column-content">
-                            <!-- Contenido dentro de la tercera columna -->
-                            <a href="#">Enlace 3</a>
-                            <!-- Otro contenido -->
-                        </div>
-                    </div>
+                </div>
+                <div class="col">
+
+                </div>
+                <div class="col">
+
                 </div>
             </div>
-        </nav>
-    </header>
+        </div>        
 
-
-    <header>
-        <nav class="navbar navbar-expand-md custom-bg-color" >
-            <div class="container-fluid" >
-                <a class="navbar-brand" href="#">
-                    <img src="../../static/image/idealroom.png" alt="Logo" width="mx-auto" height="24" class="d-inline-block align-text-top">
-                    Bootstrap
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse btn-group" role="group" aria-label="Basic radio toggle button group" id="navbarScroll">
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                    <label class="btn btn-outline-primary" for="btnradio1">Radio 1</label>
-                  
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                    <label class="btn btn-outline-primary" for="btnradio2">Radio 2</label>
-                  
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-                    <label class="btn btn-outline-primary" for="btnradio3">Radio 3</label>
-                </div>
-
-                  <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Link
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Link</a>
-                      </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                  </div>
-            
-            </div>
-          </nav>
-    </header>  
-        
-        <main>
-            <div class="nav-color">
-                a
-            </div>
-        </main>
-        <footer>
-
-        </footer>
-        <h1>sssssssssssss</h1>
+    </div>
 
 </body>
+
 </html>
