--- a/app/alquiler/templates/plantilla/menu.html
+++ b/app/alquiler/templates/plantilla/menu.html
@@ -50,7 +50,7 @@
                                     <button class="btn btn-outline-success" type="submit">Buscar</button>
                                 </form>
                                 <!-- Imagen de usuario -->
-                                <a class="" href="/perfil">
+                                <a class="" href="/perfil/">
                                     <img src="../../static/image/usuario.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
                                 </a>
                             </div>                            
