--- a/app/alquiler/templates/plantilla/perfilusu.html
+++ b/app/alquiler/templates/plantilla/perfilusu.html
@@ -13,6 +13,12 @@
 <body>
 
     <div class="profile-container">
+        <div>
+            <a class="" href="/">
+                <i data-feather="chevron-left" style="width: 30px;height: 30px;"></i>
+            </a>
+            
+        </div>
         <div class="profile-picture">
             <img src="https://i.pinimg.com/564x/81/f8/34/81f834afff7375bdb6f3c345f842b865.jpg" alt="Perfil de Crisulo">
         </div>
@@ -214,5 +220,7 @@
     </div>
 
 </body>
-
+<script>
+    feather.replace()
+  </script>
 </html>
