--- a/app/alquiler/templates/plantilla/menu.html
+++ b/app/alquiler/templates/plantilla/menu.html
@@ -29,16 +29,16 @@
                         <div class="column-content ">
                             <div class="btn-group" role="group" aria-label="Basic radio toggle button group" >
                                 <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                                <label class="btn btn-outline-mio bt-color text-dark" for="btnradio1" onclick="redirectTo('/perfil')">Inicio</label>
+                                <label class="btn btn-outline-mio bt-color text-dark" for="btnradio1" onclick="redirectTo('/')">Inicio</label>
                               
                                 <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                                <label class="btn btn-outline-mio bt-color text-dark" for="btnradio2" onclick="redirectTo('/perfil')">Categoria</label>
+                                <label class="btn btn-outline-mio bt-color text-dark" for="btnradio2" onclick="redirectTo('/mapa/')">Mapa</label>
                               
                                 <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-                                <label class="btn btn-outline-mio bt-color text-dark" for="btnradio3" onclick="redirectTo('/perfil')">Ubicacion</label>
+                                <label class="btn btn-outline-mio bt-color text-dark" for="btnradio3" onclick="redirectTo('/contacto/')">Contactanos</label>
             
                                 <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
-                                <label class="btn btn-outline-mio bt-color text-dark" for="btnradio4" onclick="redirectTo('/perfil')">Habitaciones</label>
+                                <label class="btn btn-outline-mio bt-color text-dark" for="btnradio4" onclick="redirectTo('/nosotros/')">Nosotros</label>
                             </div>
                         </div>
                     </div>
@@ -628,7 +628,7 @@
 
             </div>          
         </div>
-      </footer>
+    </footer>
 </body>
 <script>
     feather.replace()
