--- a/app/alquiler/templates/plantilla/login.html
+++ b/app/alquiler/templates/plantilla/login.html
@@ -16,15 +16,15 @@
 <body>
     <div class="container">
         <div class="brand-logo">
-            <img src="../../static/image/mujer.jpg" src="mujer.jpg" alt="Logo">
+            <img src="../../static/image/cuarto.png" src="mujer.jpg" alt="Logo">
         </div>
-        <div id="imageCarousel" class="carousel slide" data-ride="carousel">
+        <div id="imageCarousel" class="carousel slide" data-ride="carousel" style="box-shadow: 3px 1px 10px rgb(23, 20, 20);">
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../../static/image/slide1.jpg"  alt="Slide 1">
+                <div class="carousel-item active" >
+                    <img src="../../static/image/idealroom3.png"  style="border: 1px solid;box-shadow: 3px 1px 10px rgb(23, 20, 20); "  alt="Slide 1">
                 </div>
                 <div class="carousel-item">
-                    <img  src="../../static/image/slide2.png"  alt="Slide 2">
+                    <img  src="../../static/image/slide2.png"  alt="Slide 2" style="box-shadow: 3px 1px 10px rgb(23, 20, 20);">
                 </div>
                 <!-- Agrega más imágenes según sea necesario -->
             </div>
@@ -38,7 +38,7 @@
             <form>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Ingresa tu correo electrónico">
+                    <input type="text" class="form-control" id="username" aria-describedby="emailHelp" placeholder="Ingresa tu correo electrónico">
                 </div>
                 <div class="form-group">
                     <label for="password">Contraseña</label>
@@ -49,7 +49,7 @@
             </form>
             <div class="register-link">
                 <h5>¿Aún no tienes una cuenta? 
-                    <a href="/" style="color: #3498db;">
+                    <a href="/registrar/" style="color: #3498db;">
                         Regístrate aquí</a></h5>
             </div>
             <div class="social-login">
