--- a/app/alquiler/templates/registration/login.html
+++ b/app/alquiler/templates/registration/login.html
@@ -1,84 +1,72 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    
-    <link type="text/css" href='{% static "css/login.css" %}' rel="stylesheet"> 
+    <title>Inicio de Sesión - IdealRoom</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
+    <link type="text/css" href='{% static "css/login1.css" %}' rel="stylesheet">
+    <style>
+        
+    </style>
 </head>
 <body>
-    <section class="content">
-        <div class="container-center animated slideInDown">
-            <div class="inner-container">
-                <div class="view-header">
-                    <div class="header-title">
-                        <h1>Iniciar Sesion</h1>
-                        <small>
-                            Por favor ingrese sus credenciales.
-                        </small>
-                    </div>
+    <div class="container">
+        <div class="brand-logo">
+            <img src="../../static/image/cuarto.png" src="mujer.jpg" alt="Logo">
+        </div>
+        <div id="imageCarousel" class="carousel slide" data-ride="carousel" style="box-shadow: 3px 1px 10px rgb(23, 20, 20);">
+            <div class="carousel-inner">
+                <div class="carousel-item active" >
+                    <img src="../../static/image/idealroom3.png"  style="border: 1px solid;box-shadow: 3px 1px 10px rgb(23, 20, 20); "  alt="Slide 1">
                 </div>
-    
-                <div class="panel panel-filled">
-                    <div class="panel-body">
-                        <form [formGroup]="loginForm" method="post">
-                            {% csrf_token %}
-                            <div class="form-group">
-                                <div class="form-registro">
-                                    <div>
-                                        <span class="span-izquierda">Usuario </span>
-                                    </div>
-                                    <div class="division"></div>
-                                    <input class="span-derecha" name="username" type="text" id="username" title="Ingrese su Usuario"  formControlName="username" placeholder="Usuario"> 
-                                </div>
-    
-                                <div>
-                                    <ng-template #validUser>
-                                        <div>
-                                            <span class="help-block small">Ingrese su Usuario</span>
-                                        </div>
-                                    </ng-template>
-                                    
-                                </div>
-                            </div>
-    
-                            <div class="form-group">
-                                <div class="form-registro">
-                                    <div>
-                                        <span class="span-izquierda">Contraseña </span>
-                                    </div>
-                                    <div class="division"></div>
-                                    <input class="span-derecha" name="password" title="Ingrese su contraseña"  type="password" id="password" formControlName="password" placeholder="*****"> 
-                                </div>
-                                <ng-template #validPassword>
-                                    <div>
-                                        <span class="help-block small">Ingrese su Contraseña</span>
-                                    </div>
-                                </ng-template>
-                                    
-                                </div>
-                            </div>
-    
-                            <div class="d-grid gap-2 col-6 mx-auto">
-                                <button class="btn btnstart" type="submit" [disabled]="loginForm.invalid">Iniciar</button>
-                                <div class="header-title">
-                                    <h5>¿Aun no tienes una cuenta?</h5>
-                                    <h5><a class="" routerLink="/crear-usuario">Crear cuenta</a></h5>
-                                </div>
-                                
-                            </div>
-                        </form>
-                    </div>
+                <div class="carousel-item">
+                    <img  src="../../static/image/slide2.png"  alt="Slide 2" style="box-shadow: 3px 1px 10px rgb(23, 20, 20);">
                 </div>
+                <!-- Agrega más imágenes según sea necesario -->
             </div>
         </div>
-    </section>
+        <div class="intro-text">
+            <h4>¡Bienvenido a IdealRoom!</h4>
+            <p>Tu solución para una búsqueda de alojamiento estudiantil más fácil y conveniente. Encuentra tu lugar ideal cerca de Tecsup de manera rápida y eficiente con nuestra aplicación. ¡Comienza a explorar ahora y simplifica la búsqueda de alojamiento estudiantil!</p>
+        </div>
+        <div class="login-container">
+            <h1 class="text-center">Inicio de Sesión</h1>
+            <form>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="text" class="form-control" name="username"
+                    id="username"  aria-describedby="emailHelp" placeholder="Ingresa tu correo electrónico">
+                </div>
+                <div class="form-group">
+                    <label for="password">Contraseña</label>
+                    <input class="form-control"name="password"  type="password" id="password" 
+                     placeholder="Ingresa tu contraseña">
+                </div>
+                <a href="/" class="btn btn-primary">Iniciar Sesión</a>
+
+            </form>
+            <div class="register-link">
+                <h5>¿Aún no tienes una cuenta? 
+                    <a href="/registrar/" style="color: #3498db;">
+                        Regístrate aquí</a></h5>
+            </div>
+            <div class="social-login">
+                <a href="/" class="btn btn-google"><i class="fab fa-google"></i> Iniciar sesión con Google</a>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script>
+        // Inicializar el carrusel
+        $(document).ready(function(){
+            $('.carousel').carousel();
+        });
+    </script>
 </body>
 </html>
